--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">KotlinJC_FriendsActivity_app</string>
+    <string name="app_name">Friends Activity</string>
 </resources>
