--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,41 +11,73 @@
     <string name="register_screen_greeting">Please, enter your new login, which also can help your friends to find you</string>
 
 <!--    main screen-->
-    <string name="permissions_ask">Для работы шагомера требуются все разрешения</string>
-    <string name="permissions_asking">Для работы шагомера требуется разрешение на получение данных об активности.</string>
-    <string name="main_screen_not_support">Шагомер не поддерживается на этом устройстве</string>
-    <string name="main_screen_your_result">Твой результат на этой неделе</string>
-    <string name="main_screen_km">Километров</string>
+    <string name="permissions_ask">All permissions are required for the pedometer to work.</string>
+    <string name="permissions_asking">The pedometer requires permission to receive activity data.</string>
+    <string name="main_screen_not_support">Pedometer is not supported on this device.</string>
+    <string name="main_screen_your_result">Your result this week</string>
+    <string name="main_screen_km">Kilometers</string>
     <string name="main_screen_kkal">Kkal</string>
-    <string name="main_screen_sensor_on">Включить счетчик</string>
+    <string name="main_screen_sensor_on">Turn on the counter</string>
     <string name="main_screen_kkal_range">from %s to %s</string>
     <string name="main_screen_destination_progress">%s km</string>
-    <string name="destination_pivo">сходить за пивом</string>
-    <string name="destination_marafon">прошагать Марафонскую дистанцию</string>
-    <string name="destination_kanyon">пройти через Гранд-Каньон</string>
-    <string name="destination_likiy">пройти по Ликийской тропе</string>
-    <string name="destination_gobi">пересечь пустыню Гоби</string>
-    <string name="destination_earth">дойти до центра Земли</string>
-    <string name="destination_Russia">пересечь Россию</string>
-    <string name="destination_ocean">по дну через Тихий океан</string>
-    <string name="destination_equator">обогнуть Землю</string>
-    <string name="destination_moon">пешком до Луны</string>
+    <string name="destination_pivo">go get a beer</string>
+    <string name="destination_marafon">walk the marathon distance</string>
+    <string name="destination_kanyon">walk through the Grand Canyon</string>
+    <string name="destination_likiy">walk the Lycian Way</string>
+    <string name="destination_gobi">cross the Gobi Desert</string>
+    <string name="destination_earth">reach the center of the Earth</string>
+    <string name="destination_Russia">cross Russia</string>
+    <string name="destination_ocean">along the bottom across the Pacific Ocean</string>
+    <string name="destination_equator">circumnavigate the Earth</string>
+    <string name="destination_moon">walking to the moon</string>
 
 <!--    ratings screen-->
-    <string name="ratings_screen_champion">Чемпион прошлой недели:</string>
-    <string name="ratings_screen_of_course_you">конечно ты ❤️</string>
-    <string name="ratings_screen_all_distance">Всеми пройдено:️</string>
-    <string name="ratings_screen_leader_diff">Текущее отставание от лидера::️</string>
+    <string name="ratings_screen_champion">Last week\'s champion:</string>
+    <string name="ratings_screen_of_course_you">Of course you ❤️</string>
+    <string name="ratings_screen_all_distance">Total kilometers covered by everyone:️</string>
+    <string name="ratings_screen_leader_diff">Current gap to the leader::️</string>
 
 <!--    settings screen-->
-    <string name="settings_screen_login_hint">Вы можете изменить свой логин:️</string>
-    <string name="settings_screen_your_step">Длина вашего шага:️</string>
-    <string name="settings_screen_your_step_in_meters">%s m:️</string>
-    <string name="settings_screen_step_length_hint">Если вы хотите указать более точное значение советую вам пройти известное расстояние (например, по карте) и разделить на число шагов:️</string>
-    <string name="settings_screen_type_scale">Масштаб шрифтов</string>
-    <string name="settings_screen_type_scale_hint">Позволяет уменьшить или увеличить шрифты в приложении.</string>
+    <string name="settings_screen_login_hint">You can change your login. Please note that you will need to enter your new login to log in to the app.</string>
+    <string name="settings_screen_your_step">The length of your step</string>
+    <string name="settings_screen_your_step_in_meters">%s m</string>
+    <string name="settings_screen_step_length_hint">If you want to indicate a more precise value, I advise you to walk a known distance (for example, on a map) and divide by the number of steps</string>
+    <string name="settings_screen_type_scale">Font scale</string>
+    <string name="settings_screen_type_scale_hint">Allows you to decrease or increase the fonts in the application.</string>
     <string name="settings_screen_logout">Logout</string>
     <string name="settings_screen_change_theme">Change theme</string>
-    <string name="settings_screen_offline_logout_warning">Нужно выйти из офлайн режима и зарегистрироваться</string>
+    <string name="settings_screen_offline_logout_warning">You need to exit offline mode and register.</string>
+
+<!--    AppBar strings-->
+    <string name="appbar_greeting_logged">Have a good day, %s!</string>
+    <string name="appbar_greeting_offline">Have a good day!</string>
+    <string name="appbar_greeting_ratings">Статистика</string>
+    <string name="appbar_greeting_settings">Settings</string>
+
+<!--    Components-->
+    <string name="components_inputs_labels_login_error">Can\'t be empty</string>
+
+<!--    Dialogs-->
+    <string name="dialogs_titles_support">Support the developer</string>
+    <string name="dialogs_titles_step_length">Set a new step length</string>
+    <string name="dialogs_titles_theme">Theme</string>
+    <string name="dialogs_titles_scale">Change scale</string>
+    <string name="dialogs_body_support">The app is completely free, ad-free, and tailored to your convenience. If you\'d like to show your appreciation to the developer—buy a coffee or help with the project\'s development and support—you\'ll be redirected to the translations page.</string>
+    <string name="dialogs_buttons_scale_yes">Apply</string>
+    <string name="dialogs_buttons_scale_no">Cancel</string>
+    <string name="dialogs_buttons_support_yes">Yes, why not!</string>
+    <string name="dialogs_buttons_support_no">Next time...</string>
+    <string name="dialogs_buttons_theme_light">Light</string>
+    <string name="dialogs_buttons_theme_dark">Dark</string>
+    <string name="dialogs_buttons_theme_system">System</string>
+    <string name="dialogs_buttons_theme_yes">Refresh</string>
+
+<!--    Navigation bar labels-->
+    <string name="navigation_buttons_auth">Auth</string>
+    <string name="navigation_buttons_register">Register</string>
+    <string name="navigation_buttons_home">Home</string>
+    <string name="navigation_buttons_ratings">Ratings</string>
+    <string name="navigation_buttons_settings">Settings</string>
+
 
 </resources>
