--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -62,4 +62,10 @@
     <string name="navigation_buttons_home">Главная</string>
     <string name="navigation_buttons_ratings">Статистика</string>
     <string name="navigation_buttons_settings">Настройки</string>
+    <string name="notification_message_one">Хочешь улучшить концентрацию? Прогуляйся! Движение запускает выработку нейромедиаторов, отвечающих за внимание.</string>
+    <string name="notification_message_two">Пройдись пару минут — это взбодрит мозг и улучшит настроение!</string>
+    <string name="notification_message_three">Знаешь ли ты? Уже 2 минуты ходьбы улучшают кровообращение и помогают глазам отдохнуть от экрана.</string>
+    <string name="notification_message_four">Даже короткая прогулка снижает уровень стресса и повышает продуктивность.</string>
+    <string name="notification_message_five">Твоё тело создано для движения!</string>
+    <string name="notification_message_six">Каждые 20 минут сидения — 2 минуты ходьбы. Это простое правило спасает спину и улучшает обмен веществ!</string>
 </resources>
