--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,6 +12,7 @@
     <string name="main_screen_your_result">Твой результат на этой неделе</string>
     <string name="main_screen_km">Километров</string>
     <string name="main_screen_kkal">Ккал</string>
+    <string name="main_screen_remains">Осталось только:</string>
     <string name="main_screen_sensor_on">Включить счетчик</string>
     <string name="main_screen_kkal_range">от %s до %s</string>
     <string name="main_screen_destination_progress">%s км</string>
@@ -68,5 +69,5 @@
     <string name="notification_message_four">Даже короткая прогулка снижает уровень стресса и повышает продуктивность.</string>
     <string name="notification_message_five">Твоё тело создано для движения!</string>
     <string name="notification_message_six">Каждые 20 минут сидения — 2 минуты ходьбы. Это простое правило спасает спину и улучшает обмен веществ!</string>
-    <string name="notifications_weekly_steps">Твой результат: %s</string>
+    <string name="notifications_weekly_steps">Твой результат: %d</string>
 </resources>
