--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="main_screen_your_result">Your result this week</string>
     <string name="main_screen_km">Kilometers</string>
     <string name="main_screen_kkal">Kkal</string>
+    <string name="main_screen_remains">All that remains is to go:</string>
     <string name="main_screen_sensor_on">Turn on the counter</string>
     <string name="main_screen_kkal_range">from %s to %s</string>
     <string name="main_screen_destination_progress">%s km</string>
@@ -87,5 +88,5 @@
     <string name="notification_message_four">Even a short walk reduces stress and boosts productivity.</string>
     <string name="notification_message_five">Your body was made to move!</string>
     <string name="notification_message_six">For every 20 minutes of sitting, take 2 minutes to walk. This simple rule protects your back and boosts your metabolism!</string>
-    <string name="notifications_weekly_steps">Your weekly: %s</string>
+    <string name="notifications_weekly_steps">Your weekly: %d</string>
 </resources>
